@@ -1,6 +1,7 @@
 Revision history for Math-Window2Viewport
 
 0.03    
+    - added examples
 
 0.02    
     - no longer casting return vals with int (client must do this)
